[package]
name = "oxy_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
flatgeobuf = "4.6.0"
rstar = "0.9"  # Spatial indexing crate
serde-wasm-bindgen = "0.27"
csv = "1.1"
wee_alloc = "0.5"
packed_simd = { version = "0.3", features = ["f64x4"] }
js-sys = "0.3"
